--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,19 @@ header h1 {
     font-weight: bold; /* Make the header bolder */
 }
 
+h2, h3 {
+    color: #333; /* Darker color for better readability */
+    font-size: 1.2em; /* Slightly bigger font size */
+    font-weight: bold;
+}
+
+table img {
+    width: 100px;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 main {
     display: flex;
     flex-direction: column; /* Change to vertical scrolling */
