--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -281,6 +281,20 @@ b, strong {
 }
 .stars:hover {
     transform: scale(2.0); /* Zoom effect */
+    position: relative;
+}
+
+.stars:hover::before {
+    content: '';
+    position: absolute;
+    left: -20px;
+    top: -20px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 2px solid black;
+    background: rgba(255, 255, 255, 0.3);
+    z-index: -1;
 }
 
 /* Math symbols animation */
