--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,7 +112,7 @@ main {
     padding: 20px;
     min-height: calc(100% - 14%); /* Adjust to fill screen without footer */
     width: 100%;
-    background: linear-gradient(-45deg, #228B22, #006400, #87CEEB, #00008B); /* Green, dark green, light blue, dark blue */
+    background: linear-gradient(-45deg, #ffffe0, #ffd700, #adff2f, #00bfff, #ff6347); /* Green, dark green, light blue, dark blue */
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
     backdrop-filter: blur(8px);
