--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,7 @@ header h1 {
     -webkit-text-fill-color: transparent;
     animation: gradient-animation 5s ease infinite, text-shadow-animation 5s ease infinite;
     text-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
+    text-align: center; /* Center the header text */
 }
 
 @keyframes gradient-animation {
@@ -94,6 +95,7 @@ h2, h3 {
     color: #333; /* Darker color for better readability */
     font-size: 1.2em; /* Slightly bigger font size */
     font-weight: bold;
+    text-align: center; /* Center the subtitles */
 }
 
 table img {
@@ -112,7 +114,7 @@ main {
     padding: 20px;
     min-height: calc(100% - 14%); /* Adjust to fill screen without footer */
     width: 100%;
-    background: linear-gradient(-45deg, #ffffe0, #ffd700, #adff2f, #00bfff, #ff6347); /* Green, dark green, light blue, dark blue */
+    background: linear-gradient(-45deg, #FFFFE0, #ADFF2F, #ADD8E6, #FF6347); /* Light yellow, light green, light blue, light red */
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
     backdrop-filter: blur(8px);
@@ -128,7 +130,7 @@ footer {
     width: 100%;
     position: fixed;
     bottom: 0;
-    background: linear-gradient(-45deg, #228B22, #006400, #87CEEB, #00008B); /* Green, dark green, light blue, dark blue */
+    background: linear-gradient(-45deg, #FFFFE0, #ADFF2F, #ADD8E6, #FF6347); /* Light yellow, light green, light blue, light red */
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
 }
@@ -225,6 +227,7 @@ header h1,
 main h1 {
     color: #000; /* Black for headers */
     font-size: 2em; /* Reduce the header size */
+    text-align: center; /* Center the main headers */
 }
 
 main h2 {
@@ -265,15 +268,15 @@ b, strong {
 
 /* Animation styles */
 @keyframes fall {
-    0% {
-        transform: translateY(-50px);
-        opacity: 0;
+0% {
+transform: translateY(-50px);
+opacity: 0;
 }
 100% {
-    transform: translateY(0);
-    opacity: 1;
+transform: translateY(0);
+opacity: 1;
 }
-    }
+}
 
 .animated-text span {
 display: inline-block;
@@ -296,24 +299,10 @@ transition: transform 0.3s; / Smooth transition for zoom effect */
 
 .stars:hover {
 transform: scale(1.5); /* Zoom effect */
-position: relative
 }
 
-.stars:hover:before {
-content: ‘’;
-position: relative;
-right: 50%;
-top: 50%;
-width: 100px;
-height: 100px;
-border-radius: 40%;
-border: 2px solid black;
-background: rgba(255, 255, 255, 0.3);
-z-index: -1;
-}
 
-/* Math symbols animation /
-#math-symbols-container {
+math-symbols-container {
 position: fixed;
 top: 0;
 left: 0;
