--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,10 +222,9 @@ img {
     }
 }
 
-/* Colorful text styles */
 header h1,
 main h1 {
-    color: #000; /* Black for headers */
+    color: #000; 
     font-size: 2em; /* Reduce the header size */
     text-align: center; /* Center the main headers */
 }
@@ -236,34 +235,34 @@ main h2 {
 }
 
 main h3 {
-    color: #150; /* Lighter grey for less important subtitles */
+    color: #150; 
     font-size: 1.4em; /* Reduce the size for less important subtitles */
 }
 
 main p,
 main li {
-    color: #200; /* Light grey for readability */
-    line-height: 1.4; /* Add extra line between paragraphs */
+    color: #fff;
+    line-height: 1.4; 
 }
 
 main p {
-    margin-bottom: 20px; /* Extra space between paragraphs */
+    margin-bottom: 15px;
 }
 
 main li {
-    padding-left: 15px; /* Tiny indentation to bullet points */
+    padding-left: 20px; /* Tiny indentation to bullet points */
 }
 
 main a {
-    color: #c0c0c0; /* Light grey for links */
+    color: #c0c0c0;
 }
 
 main a:hover {
-    color: #a0a0a0; /* Slightly darker grey on hover */
+    color: #a0a0a0; 
 }
 
 b, strong {
-    color: #333; /* Dark grey for bolded text */
+    color: #300; 
 }
 
 /* Animation styles */
@@ -281,24 +280,24 @@ opacity: 1;
 .animated-text span {
 display: inline-block;
 opacity: 0;
-white-space: pre; /* Preserve white spaces */
+white-space: pre;
 }
 
 .animated-text span.show {
-animation: fall 0.3s forwards; /* Make the animation faster */
+animation: fall 0.3s forwards; 
 }
 
 
 .stars {
 display: inline-block;
-font-size: 2em; / Adjust size as needed /
-color: #FFD700; / Golden color /
-text-shadow: 2px 2px 2px #000; / Black border /
+font-size: 2em; 
+color: #FFD700;
+text-shadow: 2px 2px 2px #000;
 transition: transform 0.3s; / Smooth transition for zoom effect */
 }
 
 .stars:hover {
-transform: scale(1.5); /* Zoom effect */
+transform: scale(1.5); 
 }
 
 
@@ -308,15 +307,15 @@ top: 0;
 left: 0;
 width: 100%;
 height: 100%;
-pointer-events: none; / Allow clicks to pass through */
+pointer-events: none; 
 overflow: hidden;
 }
 
 .math-symbol {
 position: absolute;
 font-size: 24px;
-color: #FFD700; /* Golden color for symbols /
-pointer-events: auto; / Allow interaction with symbols */
+color: #FFD700; 
+pointer-events: auto; 
 transition: transform 0.2s, opacity 0.2s;
 }
 
