--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,7 +114,7 @@ main {
     padding: 20px;
     min-height: calc(100% - 14%); /* Adjust to fill screen without footer */
     width: 100%;
-    background: linear-gradient(-45deg, #FFFFE0, #ADFF2F, #ADD8E6, #FF6347); /* Light yellow, light green, light blue, light red */
+    background: linear-gradient(-45deg, #FFFFE0, #32CD32, #ADD8E6, #FF6347); /* Light yellow, light green, light blue, light red */
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
     backdrop-filter: blur(8px);
@@ -262,7 +262,7 @@ main a:hover {
 }
 
 b, strong {
-    color: #300; 
+    color: #333; 
 }
 
 /* Animation styles */
