--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,10 +152,10 @@ footer ul li a {
     display: block;
     padding: 10px 20px;
     background: inherit;
-    color: #fff; /* White text */
+    color: #000; 
     text-decoration: none;
     border-radius: 5px;
-    font-size: 16px; /* Adjust font size */
+    font-size: 16px; 
     transition: color 0.3s, text-shadow 0.3s;
     position: relative;
     overflow: hidden;
