--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,7 +205,7 @@ img {
     transition: transform 1.5s ease-in-out; /* Smooth transition for hover effect, slower rotation */
     margin-top: 20px; /* Add space between header and text */
     display: block;
-    margin-left: center;
+    margin-left: auto;
     margin-right: center;
 }
 
