--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,7 +116,7 @@ main {
     width: 100%;
     background: linear-gradient(-45deg, #FF6347 , #87CEEB, #DDA0DD, #98FB98); /* Light yellow, light green, light blue, light red */
     background-size: 400% 400%;
-    animation: gradient 15s ease infinite;
+    animation: gradient 12s ease infinite;
     backdrop-filter: blur(8px);
     overflow: auto;
 }
@@ -130,9 +130,9 @@ footer {
     width: 100%;
     position: fixed;
     bottom: 0;
-    background: linear-gradient(-45deg, #FFFFE0, #ADFF2F, #ADD8E6, #FF6347); /* Light yellow, light green, light blue, light red */
+    background: linear-gradient(45deg, #FF6347 , #87CEEB, #DDA0DD, #98FB98); /* Light yellow, light green, light blue, light red */
     background-size: 400% 400%;
-    animation: gradient 15s ease infinite;
+    animation: gradient 10s ease infinite;
 }
 
 footer ul {
