--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -18,6 +16,7 @@
     {% if page.title == "Home" %}
     <img src="/assets/images/gportfolio_profile_picture.png" alt="Profile Picture" class="profile-pic">
     <div id="math-symbols-container"></div>
+    <div class="center">
     {% endif %}
   </main>
   <footer>
