--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,13 +14,11 @@
     <h1>{{ site.title }}</h1>
   </header>
   <main id="content">
-    {% if page.title == "Home" %}
-    <div class="center-content">
-      <img src="/assets/images/gportfolio_profile_picture.png" alt="Profile Picture" class="profile-pic">
-      <h1 class="centered-title">Aspiring Mathematician & Computer Scientist</h1>
-    </div>
-    {% endif %}
     {{ content }}
+    {% if page.title == "Home" %}
+    <img src="/assets/images/gportfolio_profile_picture.png" alt="Profile Picture" class="profile-pic">
+    <div id="math-symbols-container"></div>
+    {% endif %}
   </main>
   <footer>
     <ul>
