--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,8 +193,15 @@ img {
     max-width: 100%;
     height: auto;
     display: block;
+    margin-left: 400;
+    margin-right: auto;
+}
+.center {
+    display: block;
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
+}
 
 .profile-pic {
     width: 200px; /* Adjust size as needed */
@@ -205,23 +212,13 @@ img {
     margin-top: 20px; /* Add space between header and text */
     display: block;
     margin-left: auto;
-    margin-right: auto;
+    margin-right: center;
 }
 
 .profile-pic:hover {
     animation: rotate infinite 3s linear; /* Continuous rotation on hover, slower speed */
 }
-}
-.center {
-    text-align: center;
-}
-.centered-title {
-    font-size: 2.5em; /* Adjust size as needed */
-    font-weight: bold;
-    text-align: center;
-    color: black; /* Or any other color */
-    margin-top: 20px; /* Space between the image and title */
-}
+
 @keyframes rotate {
     from {
         transform: rotate(0deg);
