--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,15 @@
 </head>
 <body>
   <header>
+    <div class="header-links-left">
+      <a href="https://www.linkedin.com/in/eugenio-macias/" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://www.instagram.com/eugenio_macias/" target="_blank"><i class="fab fa-instagram"></i></a>
+    </div>
     <h1>{{ site.title }}</h1>
+    <div class="header-links-right">
+      <a href="https://www.chess.com/member/eugenio_macias" target="_blank"><i class="fas fa-chess"></i></a>
+      <a href="/path/to/resume.pdf" target="_blank"><i class="fas fa-file-alt"></i></a>
+    </div>
   </header>
   <main id="content">
     {{ content }}
