--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,6 +5,7 @@
   <title>{{ page.title }}</title>
   <link rel="stylesheet" type="text/css" href="{{ '/assets/css/style.css' | relative_url }}">
   <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/cascadia-code">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
@@ -17,7 +17,7 @@
     <h1>{{ site.title }}</h1>
     <div class="header-links-right">
       <a href="https://www.chess.com/member/eugenio_macias" target="_blank"><i class="fas fa-chess"></i></a>
-      <a href="assets/files/resume.pdf" target="_blank"><i class="fas fa-file-alt"></i></a>
+      <a href="/assets/docs/resume.pdf" target="_blank"><i class="fas fa-file-alt"></i></a>
     </div>
   </header>
   <main id="content">
