--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,11 +70,11 @@ header h1 {
     color: #000; /* Black color for Eugenio Macias title */
     font-size: 2.5em; /* Increase the header size */
     font-weight: bold; /* Make the header bolder */
-    background: linear-gradient(45deg, #ff0066, #ffcc00, #33cc33, #0066ff);
+    background: linear-gradient(-5deg, #98FB98 , #87CEEB, #DDA0DD, #FF634798FB98);
     background-size: 400% 400%;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    animation: gradient-animation 5s ease infinite, text-shadow-animation 5s ease infinite;
+    animation: gradient-animation 10s ease infinite, text-shadow-animation 5s ease infinite;
     text-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
     text-align: center; /* Center the header text */
 }
@@ -148,7 +148,7 @@ footer {
     width: 100%;
     position: fixed;
     bottom: 0;
-    background: linear-gradient(45deg, #FF6347 , #87CEEB, #DDA0DD, #98FB98); /* Light yellow, light green, light blue, light red */
+    background: linear-gradient(45deg, #98FB98 , #87CEEB, #DDA0DD, #FF6347); /* Light yellow, light green, light blue, light red */
     background-size: 400% 400%;
     animation: gradient 10s ease infinite;
 }
