--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <h1>{{ site.title }}</h1>
     <div class="header-links-right">
       <a href="https://www.chess.com/member/eugenio_macias" target="_blank"><i class="fas fa-chess"></i></a>
-      <a href="/assets/docs/resume.pdf" target="_blank"><i class="fas fa-file-alt"></i></a>
+      <a href="assets/files/resume.pdf" target="_blank"><i class="fas fa-file-alt"></i></a>
     </div>
   </header>
   <main id="content">
